--- a/package.json
+++ b/package.json
@@ -2,15 +2,18 @@
   "name": "glass-ui",
   "version": "0.0.1",
   "description": "",
-  "main": "src/index.js",
+  "main": "dist/index.js",
+  "module": "dist/index.es.js",
   "scripts": {
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "build-lib": "rollup -c"
   },
   "author": "swittuth",
   "license": "MIT",
   "devDependencies": {
     "@babel/core": "^7.19.1",
+    "@babel/preset-react": "^7.18.6",
     "@rollup/plugin-node-resolve": "^14.1.0",
     "@storybook/addon-actions": "^6.5.12",
     "@storybook/addon-essentials": "^6.5.12",
@@ -25,7 +28,9 @@
     "react-dom": "^18.2.0",
     "rollup": "^2.79.0",
     "rollup-plugin-babel": "^4.4.0",
-    "rollup-plugin-peer-deps-external": "^2.2.4"
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-postcss": "^4.0.2",
+    "rollup-plugin-terser": "^7.0.2"
   },
   "peerDependencies": {
     "react": "^18.2.0",
