--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-dom": "^18.2.0"
   },
   "dependencies": {
-    "@rollup/plugin-babel": "^5.3.1"
+    "@rollup/plugin-babel": "^5.3.1",
+    "prop-types": "^15.8.1"
   }
 }
